--- a/private_dot_gitconfig.tmpl
+++ b/private_dot_gitconfig.tmpl
@@ -5,7 +5,7 @@
 [gpg]
 	format = ssh
 [gpg "ssh"]
-	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+	program = {{ .passwordSigningProgram | quote }}
 [commit]
 	gpgsign = true
 [pull]
