use the sha256sum function to govern Brewfile installation

--- a/run_onchange_brew-packages.sh.tmpl
+++ b/run_onchange_brew-packages.sh.tmpl
@@ -1,4 +1,3 @@
 #!/bin/bash
-brew bundle --no-lock --file=/dev/stdin <<EOF
-{{ include "dot_config/homebrew/Brewfile" }}
-EOF
+# Brewfile hash: {{ include "dot_config/homebrew/Brewfile" | sha256sum }}
+brew bundle --no-lock --file=.config/homebrew/Brewfile
