surround template val in double quotes

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 encryption = "age"
 [age]
-  identity = {{ .chezmoi.homeDir }}/key.txt
+  identity = "{{ .chezmoi.homeDir }}/key.txt"
   recipient = "age1p3v5hagp0l65fxz0fzvp3e6mg4kvlhtzcpsecy6ejfejprhmzsvqjqeyre"
 [data]{{ if eq .chezmoi.os "darwin" }}
   brewhome = "/opt/homebrew"
