--- a/run_before_homebrew.sh.tmpl
+++ b/run_before_homebrew.sh.tmpl
@@ -6,4 +6,6 @@ echo "found brew executable"
 sudo apt install -y git build-essential gcc docker.io
     {{ end }}
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+eval "$({{ .brewhome }}/bin/brew shellenv)"
+brew install asdf
 {{ end }}
