adding github auth. templatizing Brewfile

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -32,4 +32,7 @@ brew "borkdude/brew/clj-kondo"
 brew "borkdude/brew/jet"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+{{ if eq "darwin" .chezmoi.os }}
+brew "colima"
 cask "font-fira-code"
+{{ end }}
