--- a/run_onchange_brew-packages.sh.tmpl
+++ b/run_onchange_brew-packages.sh.tmpl
@@ -1,3 +1,3 @@
 #!/bin/bash
-# Brewfile hash: {{ include "dot_config/homebrew/Brewfile" | sha256sum }}
+# Brewfile hash: {{ include "dot_config/homebrew/Brewfile.tmpl" | sha256sum }}
 brew bundle --no-lock --file=.config/homebrew/Brewfile
