trying to make sure brew is on the path when we need it

--- a/run_onchange_brew-packages.sh.tmpl
+++ b/run_onchange_brew-packages.sh.tmpl
@@ -1,3 +1,6 @@
 #!/bin/bash
 # Brewfile hash: {{ include "dot_config/homebrew/Brewfile.tmpl" | sha256sum }}
+{{ if not (lookPath "brew") }}
+eval "$({{ .brewhome }}/bin/brew shellenv)"
+{{ end }}
 brew bundle --no-lock --file=.config/homebrew/Brewfile
