--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,6 @@
 {{ $name := promptString "full name" -}}
-{{ $email := promptString "email" -}}
+{{ $email := promptString "work email" -}}
+{{ $codedir := promptChoice "Which directory for your code repos" (list "code" "dev" "src") -}}
 encryption = "age"
 [age]
   identity = "{{ .chezmoi.homeDir }}/key.txt"
@@ -13,3 +14,4 @@ encryption = "age"
 {{ end }}
   name = {{ $name | quote }}
   email = {{ $email | quote }}
+  codedir = {{ $codedir | quote }}
