--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -4,6 +4,8 @@ tap "clojure/tools"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/services"
+brew "age"
+brew "age-plugin-yubikey"
 brew "asdf"
 brew "bat"
 brew "cloc"
@@ -19,6 +21,7 @@ brew "gum"
 brew "httpie"
 brew "jq"
 brew "lsd"
+brew "pgbouncer"
 brew "sqlite"
 brew "ripgrep"
 brew "rlwrap"
