don't try to install 1password-cli again if it's present

--- a/run_before_homebrew.sh.tmpl
+++ b/run_before_homebrew.sh.tmpl
@@ -17,6 +17,6 @@ eval "$({{ .brewhome }}/bin/brew shellenv)"
 {{ if not (lookPath "asdf") }}
 brew install asdf age
 {{ end }}
-{{ if eq "darwin" .chezmoi.os }}
+{{ if (and (eq "darwin" .chezmoi.os) (not (findExecutable "op" (list (printf "%s/bin" .brewhome))))) }}
 brew install 1password-cli
 {{ end }}
