add a tiny Nestfile and run pacrat

--- a/run_after_github-auth.sh.tmpl
+++ b/run_after_github-auth.sh.tmpl
@@ -1,4 +1,7 @@
 #!/bin/bash
+{{ if not (lookPath "gh") }}
+eval "$({{ .brewhome }}/bin/brew shellenv)"
+{{ end }}
 if ! gh auth status >/dev/null 2>&1; then
     gh auth login --git-protocol ssh --hostname github.com --web -s admin:public_key -s admin:ssh_signing_key
 fi
