don't bother running pacrat if there's no zsh

--- a/run_onchange_pacrat.sh.tmpl
+++ b/run_onchange_pacrat.sh.tmpl
@@ -1,3 +1,5 @@
 #!/bin/bash
 # Nesetfile hash: {{ include "nest.ini" | sha256sum }}
+{{ if (lookPath "zsh") }}
 curl -sSfL https://raw.githubusercontent.com/MicahElliott/pacrat/refs/heads/main/bin/pacrat | zsh
+{{ end }}
