--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -4,12 +4,15 @@ tap "clojure/tools"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/services"
+tap "polyfy/polylith"
 brew "asdf"
 brew "bat"
 brew "cloc"
+brew "clojure-lsp"
 brew "direnv"
 brew "docker"
 brew "docker-compose"
+brew "eza"
 brew "fish"
 brew "fzf"
 brew "git"
@@ -33,6 +36,7 @@ brew "borkdude/brew/clj-kondo"
 brew "borkdude/brew/jet"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+brew "polyfy/polylith/poly"
 {{ if eq "darwin" .chezmoi.os }}
 tap "d12frosted/emacs-plus"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-savchenkovaleriy-big-sur-icon"]
