add confluent to PATH

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -15,7 +15,8 @@ if not contains $_asdf_shims $PATH
 end
 set --erase _asdf_shims
 
-set -x PATH {$HOME}/bin {$HOME}/.local/bin $PATH {{ .brewhome }}/opt/postgresql@16/bin {{ .brewhome }}/bin {$HOME}/infra/bin
+set -x CONFLUENT_HOME {$HOME}/confluent-7.9.0
+set -x PATH {$CONFLUENT_HOME}/bin {$HOME}/bin {$HOME}/.local/bin $PATH {{ .brewhome }}/opt/postgresql@16/bin {{ .brewhome }}/bin {$HOME}/infra/bin
 set -x LC_ALL en_US.UTF-8
 starship init fish | source
 
