--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -21,6 +21,7 @@ brew "glow"
 brew "gum"
 brew "httpie"
 brew "jq"
+brew "kubectl"
 brew "lsd"
 brew "pgbouncer"
 brew "sqlite"
@@ -39,7 +40,7 @@ brew "heroku/brew/heroku"
 brew "polyfy/polylith/poly"
 {{ if eq "darwin" .chezmoi.os }}
 tap "d12frosted/emacs-plus"
-brew "d12frosted/emacs-plus/emacs-plus@30", args: ["with-savchenkovaleriy-big-sur-icon"]
+brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-savchenkovaleriy-big-sur-icon"]
 brew "colima"
 cask "font-fira-code"
 {{ end }}
