add hashicorp vault via homebrew

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -1,6 +1,7 @@
 tap "babashka/brew"
 tap "borkdude/brew"
 tap "clojure/tools"
+tap "hashicorp/tap"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/services"
@@ -37,6 +38,7 @@ brew "borkdude/brew/clj-kondo"
 brew "borkdude/brew/jet"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+brew "hashicorp/tap/vault"
 brew "polyfy/polylith/poly"
 {{ if eq "darwin" .chezmoi.os }}
 tap "d12frosted/emacs-plus"
