--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -7,6 +7,7 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 tap "polyfy/polylith"
 brew "asdf"
+brew "azure-cli"
 brew "bat"
 brew "cloc"
 brew "clojure-lsp"
