just getting back in sync with some recent changes

--- a/private_dot_gitconfig.tmpl
+++ b/private_dot_gitconfig.tmpl
@@ -13,3 +13,5 @@
 	rebase = true
 [core]
 	excludesfile = {{ .chezmoi.homeDir }}/.gitignore_global
+[includeIf "gitdir:{{ .chezmoi.homeDir }}/rent-corp/"]
+	path = {{ .chezmoi.homeDir }}/rent-corp/.gitconfig
