recommended changes for Redfin ecosystem

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -1,6 +1,8 @@
+tap "atlassian/homebrew-acli"
 tap "babashka/brew"
 tap "borkdude/brew"
 tap "clojure/tools"
+tap "conduktor/brew"
 tap "hashicorp/tap"
 tap "heroku/brew"
 tap "homebrew/bundle"
@@ -9,8 +11,10 @@ tap "polyfy/polylith"
 brew "asdf"
 brew "azure-cli"
 brew "bat"
+brew "bazelisk"
 brew "cloc"
 brew "clojure-lsp"
+brew "conduktor/brew/conduktor-cli"
 brew "direnv"
 brew "docker"
 brew "docker-compose"
@@ -28,6 +32,7 @@ brew "httpie"
 brew "hugo"
 brew "jq"
 brew "kubectl"
+brew "lima-additional-guestagents"
 brew "lsd"
 brew "pgbouncer"
 brew "sqlite"
@@ -37,6 +42,8 @@ brew "shellcheck"
 brew "starship"
 brew "uv"
 brew "wget"
+brew "yq"
+brew "atlassian/homebrew-acli/acli"
 brew "borkdude/brew/babashka"
 brew "babashka/brew/neil"
 brew "borkdude/brew/clj-kondo"
