--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -21,7 +21,7 @@ set -x REDFIN_DATA_SECURE /usr/local/redfin/data/secure
 set -x DEFAULT_KAFKA_SSL_TRUSTSTORE_LOCATION /usr/local/redfin/data/secure/ssl/default.kafka.client.truststore.jks
 set -x DEFAULT_KAFKA_SSL_TRUSTSTORE_PASSWORD (cat /usr/local/redfin/data/secure/ssl/default.truststore.password)
 set -x CONFLUENT_HOME {$HOME}/confluent-7.9.0
-set -x PATH {$HOME}/n/bin {{ .brewhome }}/bin {$HOME}/code/fin/bin {$CONFLUENT_HOME}/bin {$HOME}/bin {$HOME}/.local/bin $PATH {{ .brewhome }}/opt/postgresql@16/bin {$HOME}/infra/bin
+set -x PATH {$HOME}/.asdf/shims {$HOME}/n/bin {{ .brewhome }}/bin {$HOME}/code/fin/bin {$CONFLUENT_HOME}/bin {$HOME}/bin {$HOME}/.local/bin $PATH {{ .brewhome }}/opt/postgresql@16/bin {$HOME}/infra/bin
 set -x LC_ALL en_US.UTF-8
 starship init fish | source
 set -x JAVA_HOME (asdf where java)
