--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -8,10 +8,12 @@ tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/services"
 tap "polyfy/polylith"
+tap "steveyegge/beads"
 brew "asdf"
 brew "azure-cli"
 brew "bat"
 brew "bazelisk"
+brew "bd"
 brew "cloc"
 brew "clojure-lsp"
 brew "conduktor/brew/conduktor-cli"
