adding lambdaisland/classpath and eksctl

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -1,4 +1,5 @@
 tap "atlassian/homebrew-acli"
+tap "aws/tap"
 tap "babashka/brew"
 tap "borkdude/brew"
 tap "clojure/tools"
@@ -42,7 +43,9 @@ brew "starship"
 brew "uv"
 brew "wget"
 brew "yq"
+brew "zig"
 brew "atlassian/homebrew-acli/acli"
+brew "aws/tap/eksctl"
 brew "borkdude/brew/babashka"
 brew "babashka/brew/neil"
 brew "borkdude/brew/clj-kondo"
